
syntax = "proto3";

package gonews;

option go_package = "./pkg/gonews/pb";

service GoNewsService {
  rpc Posts(PostsRequest) returns (PostsResponse) {}
  rpc NewsFullDetailed(OneNewsRequest) returns (OnePostResponse) {}
  rpc NewsShortDetailed(OneNewsRequest) returns (OnePostResponse) {}
  rpc FilterNews(FilterNewsRequest) returns (PostsResponse) {}
}

message PostsRequest {
  int64 newsCount = 1;
}

message OneNewsRequest {
  int64 newsId = 1;
}

message FilterNewsRequest {
  string filterValue = 2;
}

message Post {
  int64 ID = 1;
  string Title = 2;
  string Content = 3;
  int64 PubTime = 4;
  string Link = 5;
  string SourceXmlLink = 6;
}

message OnePostResponse {
  int64 status = 1;
  string error = 2;
  Post posts = 3;
}

message PostsResponse {
  int64 status = 1;
  string error = 2;
  repeated Post posts = 3;
}
